--- a/package.json
+++ b/package.json
@@ -2,18 +2,37 @@
   "name": "react",
   "version": "1.0.0",
   "description": "learning the react js ",
-  "main": "App.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "start": "parcel index.html",
+    "build": "parcel build index.html"
   },
   "author": "laxmanasawa9312@gmail.com",
   "license": "ISC",
   "devDependencies": {
-    "parcel": "^2.12.0"
+    "@babel/core": "^7.25.7",
+    "@babel/preset-env": "^7.25.7",
+    "@babel/preset-react": "^7.25.7",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.5.0",
+    "@testing-library/react": "^16.0.1",
+    "babel-jest": "^29.7.0",
+    "buffer": "^6.0.3",
+    "jest": "^29.7.0",
+    "parcel": "^2.12.0",
+    "process": "0.11.10"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.7",
+    "axios": "^1.7.7",
+    "jest-environment-jsdom": "^29.7.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.26.2",
+    "redux-thunk": "^3.1.0"
   },
-   "browserslist":["last 2 versions"]
+  "browsersList": [
+    "last 2 versions"
+  ]
 }
